Fix alignment

--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@
   font-size: 30px;
 }
 
+.info {
+  align-self: center;
+}
+
 h1 {
   text-align: center;
   font-size: 70px;
@@ -63,10 +67,6 @@ body {
   background-color: #FFD580;
   display: flex;
   flex-direction: column;
-}
-
-body p {
-  align-self: center;
 }
 
 ol, ul, p, h2 {
